--- a/doc/styles.css
+++ b/doc/styles.css
@@ -16,12 +16,19 @@ table{border-collapse:collapse;border-spacing:0}
 hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
 input,select{vertical-align:middle}
 
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500&display=swap');
+
+
 html, body {
+    font-family: 'DM Sans', sans-serif;
+
     height: 100vh;  /* Asegura que el contenedor ocupe toda la pantalla */
     margin: 0;
     display: flex; /* Centra el contenido de body */
     justify-content: center; /* Centra horizontalmente */
     align-items: center; /* Centra verticalmente */
+
+    background-color: rgb(177, 186, 199);
 }
 
 
@@ -47,31 +54,76 @@ html, body {
 
 .box-1-2{ 
     grid-area: create-write; 
-    background-color: #b81212; /* Light Red */
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 20px;
+
+    .box-1{
+        flex: 1;
+        background-color: hsl(31, 66%, 93%);
+
+        .quicker-cursive{
+            color: hsl(256, 67%, 59%);
+            font-style: italic;
+        }
+    }
+    .box-2{
+        flex: 1;
+        background-color: hsl(39, 100%, 71%);
+    }
+
+    .box-1, .box-2{
+        border-radius: 10px;
+        padding: 20px;
+    }
+
 }
 .box-3 { 
     grid-area: social; 
-    background-color: #99ccff; /* Light Blue */
+    background-color: hsl(256, 67%, 59%); /* Light Blue */
 }
 .box-4 { 
     grid-area: manage; 
-    background-color: #99ff99; /* Light Green */
+    background-color: white;
+
 }
 .box-5 { 
     grid-area: faster; 
-    background-color: #ffcc99; /* Light Orange */
+    background-color: white;
+
 }
 .box-6 { 
     grid-area: maintain; 
-    background-color: #ffff99; /* Light Yellow */
+    background-color: hsl(39, 100%, 71%); /* Light Yellow */
 }
 .box-7 { 
     grid-area: schedule; 
-    background-color: #cc99ff; /* Light Purple */
+    background-color: hsl(254, 88%, 90%); /* Light Purple */
 }
 .box-8 { 
     grid-area: grow; 
-    background-color: #ff99cc; /* Light Pink */
+    background-color: hsl(256, 67%, 59%); /* Light Pink */
+}
+
+
+
+.box-3,
+.box-4,
+.box-5,
+.box-6,
+.box-7,
+.box-8 {
+    border-radius: 10px;
+
+    padding: 20px;
+
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .attribution { 
@@ -83,3 +135,7 @@ html, body {
 }
 
 .attribution a { color: hsl(228, 45%, 44%); }
+
+p{
+    font-size:18px;
+}
